# pdfMerger

./: .gitignore  README.md  pyproject.toml
src/pdfmerger/: cli_utils.py  files.py  main.py  merger.py  status.py
