[project]
name = "pdfmerger"
version = "0.1.0"
description = ""
authors = [
    {name = "Carlos Lima",email = "carlosjrslima@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pypdf (>=6.4.0,<7.0.0)"
]

[tool.poetry]
packages = [{include = "pdfmerger", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
